--- a/WebRoot/WEB-INF/classes/shiro.ini
+++ b/WebRoot/WEB-INF/classes/shiro.ini
@@ -1,48 +1,33 @@
-[main]  
-shiro.loginUrl = /auth/login  
-jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm  
-dataSource = com.mysql.jdbc.jdbc2.optional.MysqlDataSource  
-dataSource.serverName = localhost  
-dataSource.user = root  
-dataSource.password = root  
-dataSource.databaseName = jinlu  
-jdbcRealm.dataSource = $dataSource  
-jdbcRealm.authenticationQuery = SELECT password  FROM sec_user WHERE status=1 AND username = ?  
-jdbcRealm.userRolesQuery = SELECT r.role_name FROM sec_role AS r, sec_user_role AS ur WHERE r.id = ur.role_id AND r.status=1 AND ur.user_id = (SELECT id FROM sec_user WHERE username = ?)  
-jdbcRealm.permissionsQuery = SELECT p.permission FROM sec_permission AS p, sec_role_permission AS rp WHERE p.id = rp.permission_id AND rp.role_id = (SELECT id FROM sec_role WHERE role_name = ?)  
-jdbcRealm.permissionsLookupEnabled = true  
-securityManager.realms = $jdbcRealm  
-passwordMatcher=org.apache.shiro.authc.credential.HashedCredentialsMatcher  
-passwordMatcher.hashAlgorithmName=MD5  
-jdbcRealm.credentialsMatcher=$passwordMatcher  
-  
-#cache  
-shiroCacheManager = org.apache.shiro.cache.ehcache.EhCacheManager  
-shiroCacheManager.cacheManagerConfigFile = classpath:ehcache.xml  
-securityManager.cacheManager = $shiroCacheManager  
-   
-#session  
-sessionDAO = org.apache.shiro.session.mgt.eis.EnterpriseCacheSessionDAO  
-sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager  
-sessionDAO.activeSessionsCacheName = shiro-activeSessionCache  
-sessionManager.sessionDAO = $sessionDAO  
-securityManager.sessionManager = $sessionManager  
-securityManager.sessionManager.globalSessionTimeout = 3600000  
-  
-[filters]  
-urlFilter=com.ziyTech.framework.interceptor.ShiroPathMatchFilter  
-  
-#这里的规则，web.xml中的配置的ShiroFilter会使用到。  
-[urls]  
-/=anon  
-/img/**=anon  
-/js/**=anon  
-/css/**=anon  
-/fonts/**=anon  
-/uploader/**=anon  
-/uploads/**=anon  
-/auth/**=anon  
-/msg/**=anon  
-/api/**=anon  
-/test/*=anon  
-/**=urlFilter  
+[main]
+#sessionId相关设定
+sessionIdCookie=org.apache.shiro.web.servlet.SimpleCookie
+sessionIdCookie.name=jshop-admin-web
+sessionIdCookie.path=/
+sessionIdCookie.maxAge=1800
+sessionIdCookie.httpOnly=true
+#sessionManager
+sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
+sessionManager.sessionIdCookie = $sessionIdCookie
+sessionManager.sessionIdCookieEnabled = true
+sessionManager.globalSessionTimeout = 3600000
+#Realm
+dbRealm = com.wtms.shiro.AuthorizationRealm
+#Cache
+cacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
+#---------------
+securityManager.sessionManager=$sessionManager
+securityManager.realm = $dbRealm
+securityManager.cacheManager = $cacheManager
+#[filters] 这个已经被取消，并入main中
+#自定义验证过滤器
+app_auth= com.wtms.shiro.AuthorizeFilter
+#登录页面
+app_auth.loginUrl = /user/login
+#未授权页面
+#app_auth.unauthorizedUrl=/user/unauthorized
+[urls]
+/test/** = anon
+/public/** = anon
+/uploads/** = anon
+/passport/* = anon
+/** = app_auth
