--- a/res/shiro.ini
+++ b/res/shiro.ini
@@ -20,9 +20,9 @@ securityManager.realm = $dbRealm
 securityManager.cacheManager = $cacheManager
 #[filters] 这个已经被取消，并入main中
 #自定义验证过滤器
-app_auth= com.wtms.shiro.AuthorizeFilter
+app_auth= com.wtms.shiro.ShiroPathMatchFilter
 #登录页面
-app_auth.loginUrl = /user/login
+#app_auth.loginUrl = /user/login
 #未授权页面
 #app_auth.unauthorizedUrl=/user/unauthorized
 [urls]
