--- a/WebRoot/WEB-INF/classes/shiro.ini
+++ b/WebRoot/WEB-INF/classes/shiro.ini
@@ -6,8 +6,7 @@ sessionIdCookie.path=/
 sessionIdCookie.maxAge=1800
 sessionIdCookie.httpOnly=true
 #sessionManager
-#sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
-sessionManager = com.wtms.shiro.SessionManager
+sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 sessionManager.sessionIdCookie = $sessionIdCookie
 sessionManager.sessionIdCookieEnabled = true
 sessionManager.globalSessionTimeout = 3600000
@@ -16,20 +15,19 @@ dbRealm = com.wtms.shiro.AuthorizationRealm
 #Cache
 cacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
 #---------------
-#securityManager.sessionManager=$sessionManager
-#securityManager.realm = $dbRealm
-#securityManager.cacheManager = $cacheManager
+securityManager.sessionManager=$sessionManager
+securityManager.realm = $dbRealm
+securityManager.cacheManager = $cacheManager
 #[filters] 这个已经被取消，并入main中
 #自定义验证过滤器
-#app_auth= com.wtms.shiro.ShiroPathMatchFilter
+app_auth= com.wtms.shiro.ShiroPathMatchFilter
 #登录页面
-#app_auth.loginUrl = /user/login
+app_auth.loginUrl = /user/login
 #未授权页面
 #app_auth.unauthorizedUrl=/user/unauthorized
 [urls]
-#/test/** = anon
-#/public/** = anon
-#/uploads/** = anon
-#/passport/* = anon
-#/user/login = anon
-#/blog/* = app_auth
+/test/** = anon
+/public/** = anon
+/uploads/** = anon
+/passport/* = anon
+/** = app_auth
