--- a/res/shiro.ini
+++ b/res/shiro.ini
@@ -22,7 +22,7 @@ securityManager.cacheManager = $cacheManager
 #自定义验证过滤器
 app_auth= com.wtms.shiro.ShiroPathMatchFilter
 #登录页面
-#app_auth.loginUrl = /user/login
+app_auth.loginUrl = /user/login
 #未授权页面
 #app_auth.unauthorizedUrl=/user/unauthorized
 [urls]
