--- a/WebRoot/WEB-INF/classes/log4j.properties
+++ b/WebRoot/WEB-INF/classes/log4j.properties
@@ -1,5 +1,5 @@
 # log4j.rootLogger=WARN, stdout, file
-log4j.rootLogger=INFO, stdout, file
+log4j.rootLogger=ERROR, stdout, file
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-[Thread: %t]-[%C.%M()]: %m%n
@@ -8,6 +8,5 @@ log4j.appender.stdout.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.DatePattern='_'yyyy-MM-dd'.log'
 log4j.appender.file.File=./jfinal_demo.log
-log4j.appender.file.Threshold = INFO
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%n%-d{yyyy-MM-dd HH:mm:ss}%n[%p]-[Thread: %t]-[%C.%M()]: %m%n
